# CS441TuringMachineProject

./: .gitignore  CMakeLists.txt  README.md  VM.c  VM.h  a.out  demo.tape  encodings.h  loadingbar.c  tape.c  tape.h  tape2.tape  turing_machine.c
TMasm/: Makefile  demo.asm  demo.tape  demo2.asm  demo3.asm  encodings.h  grammar.txt  lexer.cpp  listing.cpp  listing.h  parser.cpp  tmasm  token.h  turing  turing_mess.cpp
example/: instructions.txt  output.txt  run  shasm  shasm.cpp  turing_mess.cpp
